Add breadcrumbs to Raids#show

--- a/app/views/raids/show.haml
+++ b/app/views/raids/show.haml
@@ -3,8 +3,10 @@
     $("#raid_tabs").tabs();
   });
   
-%h2= @raid.date
-
+%h2
+  = link_to 'Raids', raid_path
+  &raquo;
+  = @raid.date
 #raid_tabs
   %ul
     %li= link_to '<span>Attendees</span>', '#attendees'
