--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -29,53 +29,8 @@
     %li= link_to '<span>Punishments</span>', '#punishments'
     %li= link_to '<span>Wishlist</span>', '#wishlist'
     %li= link_to '<span>Achievements</span>', '#achievements'
-  #raids
-    %table.list
-      %thead
-        %tr
-          %th.date Date
-          %th.attendance Attendance
-          %th.fill Note
-          %th.image Thread
-      %tbody
-        - @raids.each do |raid|
-          %tr{ :class => cycle('even', 'odd') }
-            %td.date= link_to h(raid.date), raid_path(raid)
-            %td.attendance= member_attendance(raid, @member)
-            %td.fill= h(raid.note)
-            %td.image= raid.thread
-  #items
-    %table.list
-      %thead
-        %tr
-          %th Name
-          %th.date Raid
-          %th.number Price
-      %tbody
-        - @member.items.each do |item|
-          %tr{ :class => cycle('even', 'odd') }
-            %td= link_to_item_with_stats(item)
-            %td.date= link_to h(item.raid.date), raid_path(item.raid) unless item.raid.nil?
-            %td.number= number_with_precision(item.adjusted_price, :precision => 2)
-  #punishments
-    %table.list
-      %thead
-        %tr
-          %th Reason
-          %th.date Expires
-          %th.number Value
-      %tbody
-        - @member.punishments.each do |pun|
-          %tr{ :class => cycle('even', 'odd') }
-            %td= h(pun.reason)
-            %td.date= h(pun.expires.to_s(:db))
-            %td.number= number_with_precision(pun.value)
-  #wishlist
-    %table.list
-      %thead
-        %tr
-          %th.fill Item
-          %th.fill Note
-          %th Type
-      %tbody
+  #raids= render :partial => 'raids'
+  #items= render :partial => 'items'
+  #punishments= render :partial => 'punishments'
+  #wishlist= render :partial => 'wishlist'
   #achievements
