Had singular paths instead of plural for index links

--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -4,7 +4,7 @@
   });
   
 %h2
-  = link_to 'Members', member_path
+  = link_to 'Members', members_path
   &raquo;
   = member_link_colored(@member)
 / %div
