Add a tab for Basic stats on Members#show

--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -39,3 +39,15 @@ h2
   :color = #008300
 .negative
   :color = #A1000E
+
+// Progress Bars - http://blog.leetsoft.com/2006/8/22/super-simple-css-bars
+// Also see http://wiki.github.com/paolodona/rails-widgets/progressbar
+div.progress-container
+  :border 1px solid #ccc
+  :width 90%
+  :margin 2px 5px 2px 0
+  :padding 1px
+  :float left
+  :background white
+  div
+    :height 12px
