--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -36,3 +36,13 @@ h2 a {
 
 .negative {
   color: #a1000e; }
+
+div.progress-container {
+  border: 1px solid #ccc;
+  width: 90%;
+  margin: 2px 5px 2px 0;
+  padding: 1px;
+  float: left;
+  background: white; }
+  div.progress-container div {
+    height: 12px; }
