--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -1,5 +1,5 @@
 // Table Cell Types
-th.number, td.number
+th.number, td.number, th.right, td.right
   :text-align right
 th.member, td.member
   :text-align left
@@ -20,5 +20,7 @@ th.image, td.image, th.checkbox, td.checkbox
   :text-align center
   :min-width 16px
   :max-width 48px
+th.center, td.center
+  :text-align center
 th.fill, td.fill
   :width 100%
