Convert the rest of our CSS to Sass

--- a/app/views/layouts/redesign.haml
+++ b/app/views/layouts/redesign.haml
@@ -7,8 +7,7 @@
     = javascript_include_tag 'jquery.ui.js', :cache => true
     = javascript_include_tag 'jquery.tabs.js', :cache => true
     
-    = stylesheet_link_tag 'application', 'basic', 'tables', 'tabs'
-    %link{ :rel => 'stylesheet', :href => '/stylesheets/r_tables.css', :type => 'text/css', :media => 'screen' }
+    = stylesheet_link_tag 'application', 'basic', 'layout', 'tables', 'tabs'
   %body#redesign
     #wrapper
       #top-menu
