--- a/public/stylesheets/sass/tables.sass
+++ b/public/stylesheets/sass/tables.sass
@@ -1,3 +1,30 @@
+// Redmine Tables
+table
+  th
+    :text-align left
+  td
+    :padding 2px
+  .odd
+    :background-color #F6F7F8
+  .even
+    :background-color #FFFFFF
+
+table.list
+  :border 1px solid #E4E4E4
+  :border-collapse collapse
+  :width 100%
+  :margin-bottom 4px
+  th
+    :background-color #EEEEEE
+    :padding 4px
+    :white-space nowrap
+  td
+    :vertical-align top
+  tbody
+    tr
+      &:hover
+        :background-color #FFFFDD
+
 // Table Cell Types
 th.number, td.number, th.right, td.right
   :text-align right
