--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -1,4 +1,21 @@
+body
+  :font 12px "Lucida Grande", Lucida, Verdana, sans-serif
+  :margin 0
+  :padding 0
+  :min-width 600px
+  &, a
+    :color #484848
+
+h1
+  :font-size 2em
+  :padding 0
+  :margin 0
+
 h2
+  :border-bottom 1px solid #BBBBBB
+  :color #444444
+  :margin 0 0 10px 0
+  :padding 2px 10px 1px 0
   a
     :text-decoration none
 
