--- a/app/views/members/show.haml
+++ b/app/views/members/show.haml
@@ -10,10 +10,10 @@
 #member_tabs
   %ul
     %li= link_to_tab('Basic')
-    %li= link_to_tab('Raids')
-    %li= link_to_tab('Items')
-    %li= link_to_tab('Punishments')
-    %li= link_to_tab('Wishlist')
+    %li= link_to_tab("Raids (#{@raids.size})")
+    %li= link_to_tab("Items (#{@member.items.size})")
+    %li= link_to_tab("Punishments (#{@member.punishments.size})")
+    %li= link_to_tab("Wishlist")
     %li= link_to_tab('Achievements')
   #basic
     %table.list
