Trying to fix XHTML validation errors

--- a/app/views/layouts/redesign.haml
+++ b/app/views/layouts/redesign.haml
@@ -1,5 +1,6 @@
+!!! XML
 !!!
-%html
+%html{html_attrs('en-US')}
   %head
     %title= @page_title || "JuggRails"
     %script{ 'type' => 'text/javascript', :src => "http://www.wowhead.com/widgets/power.js" }
