--- a/public/stylesheets/sass/basic.sass
+++ b/public/stylesheets/sass/basic.sass
@@ -1,3 +1,5 @@
+!default_font = "12px \"Lucida Grande\", Lucida, Verdana, sans-serif"
+
 *
   :padding 0
   :margin 0
@@ -22,6 +24,20 @@ h2
   :padding 2px 10px 1px 0
   a
     :text-decoration none
+    
+#member_stats
+  :text-align center
+  :border-bottom 1px solid #BBBBBB
+  :padding-bottom 10px
+  :margin-bottom 10px
+  h3
+    :display inline
+    :font 3em Georgia
+    :margin 0
+    span.small
+      :vertical-align middle
+      :font = 14px Georgia
+      :margin 0 60px 0 -3px
 
 // WoW Class Colors
 .Death, .Knight
